--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.lan, *.ogg, *.wav"
 exclude_filter=""
 patch_list=PoolStringArray(  )
 
